# llm-therapy

./: .gitignore  README.md  config.py  dialogue_manager.py  example.py  judge_model.py  llm_providers.py  main.py  requirements.txt  test_basic.py  test_conversation.txt
Roleplay_doh/: .env.example  Makefile  README.md  requirements.txt
Roleplay_doh/data/processed/: principles.tsv  principles_tagged.tsv
Roleplay_doh/data/raw/: roleplaydoh_train.jsonl
Roleplay_doh/data/raw/roleplay_doh_export/: sample_data.jsonl
Roleplay_doh/outputs/personas/: persona_cbt_system.txt  persona_dbt_system.txt  persona_irt_system.txt
Roleplay_doh/outputs/prompts/: irt_few_shot.txt  irt_structured.json  irt_zero_shot.txt
Roleplay_doh/src/: build_personas.py  clean_transform.py  config.py  data_pull.py  eval_metrics.py  extract_fields.py  main.py  utils.py
dialogues/: dialogue_20250729_160857.txt  dialogue_20250804_152447.txt
reDreamIRT/: README.md  agent.py  api.py  chat_client.py  irt_app.py  logging_config.py  models.py  prompts.py  pyproject.toml
reDreamIRT/tests/: test_models.py
